@@ -39,6 +39,7 @@ endif::[]
 ===== Fixed
 
 - Fix growing number of open file descriptors when HTTP request to APM is never sent {pull}1351[#1351]
+- Fix setting span http status code when Faraday Middleware is used {pull}1368[#1368]
 
 [[release-notes-4.6.0]]
 ==== 4.6.0
